--- a/index.html
+++ b/index.html
@@ -5,8 +5,92 @@
     <title>HTML Academy: Техномарт</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
-
+    <header>
+      <div class="header-top">
+        <a href="#">
+          <img src="#" alt="Логотип Техномарт">
+        </a>
+        <a href="#">Закладки: 0</a>
+        <a href="#">Корзина: 0</a>
+        <a href="#">Оформить заказ</a>
+      </div>
+      <div class="header-middle">
+        <h1>Интернет-магазин строительных материалов и инструментов для дома</h1>
+        <div class="contacts">
+            <p class="contacts-phone"> +7 (812) 555-05-55</p>
+            <p class="contacts-address">г. Санкт-Петербург, ул. Б.Конюшенная, д. 19/8</p>
+        </div>
+        <ul class="user-navigation">
+          <li>Войти</li>
+          <li>Регистрация</li>
+        </ul>
+      </div>
+      <nav>
+        <ul class="site-navigation">
+          <li><a href="#">Главная</a></li>
+          <li><a href="#">Компания</a></li>
+          <li><a href="#">Каталог</a></li>
+          <li><a href="#">Новости</a></li>
+          <li><a href="#">Спецпредложения</a></li>
+          <li><a href="#">Доставка</a></li>
+          <li><a href="#">Контакты</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section class="company">
+        <h1>КОМПАНИЯ "ТЕХНОМАРТ"</h1>
+        <p>Настоящий мужской шопинг начинается здесь! Огромный выбор товаров для ремонта и <br>
+        строительства не оставит равнодушним любителей сэкономить на гастарбайтерах</p>
+        <p>Мы можем доставить ваш товар в самые отдаленные точки России! <br>
+        Техномарт работает со многими транспортными компнаиями:</p>
+        <ul class="company-transport">
+          <li>Деловые линии</li>
+          <li>Автотрейдинг</li>
+          <li>ЖелДорЭкспедиция</li>
+          <a class="button" href="#">ПОДРОБНЕЕ О КОМПАНИИ</a>
+        </ul>
+      </section>
+      <section class="address">
+        <h2>КОНТАКТЫ</h2>
+        <p>Вы можете забрать товары сами, <br>
+        заехав в наш офис:</p>
+        <!--Здесь будет карта-->
+        <a class="button" href="#">ЗАБЛУДИЛИСЬ? НАПИШИТЕ НАМ!</a>
+      </section>
+    </main>
+    <footer>
+      <div class="footer-top">
+        <a href="#">
+          <img src="#" alt="Логотип Техномарт">
+        </a>
+        <p class="footer-contacts">г. Санкт-Петербург, ул. Б.Конюшенная, д. 19/8 <br>
+          +7 (812) 555-05-55</p>
+          <ul class="footer-menu">
+            <li><a href="#">Компания</a></li>
+            <li><a href="#">Новости</a></li>
+            <li><a href="#">Католог</a></li>
+            <li><a href="#">Доставка</a></li>
+            <li><a href="#">Контакты</a></li>
+          </ul>
+          <ul class="footer-categories">
+            <li><a href="#">Материалы</a></li>
+            <li><a href="#">Техника</a></li>
+            <li><a href="#">Инструменты</a></li>
+            <li><a href="#">Спецпредложения</a></li>
+          </ul>
+      </div>
+      <div class="footer-bottom">
+        <p>&#169 2010-2017 Компания "Техномарт" <br>
+        Все права защищены</p>
+        <a href="#">Инстаграм</a>
+			  <a href="#">Фейсбук</a>
+        <a href="#">Вконтакте</a>
+        <p>Обратная связь: <br>
+        <span class="footer-yellow-name">mail@htmlacademy.ru</span></p>
+        <p>Разработано - <br>
+        <span class="footer-yellow-name">htmlacademy.ru</span></p>
+      </div>
+    </footer>
   </body>
 </html>
