--- a/index.html
+++ b/index.html
@@ -10,26 +10,26 @@
         <a href="#">
           <img src="#" alt="Логотип Техномарт">
         </a>
-        <a href="#">Закладки: 0</a>
-        <a href="#">Корзина: 0</a>
-        <a href="#">Оформить заказ</a>
+        <a class="bookmarks" href="#">Закладки: 0</a>
+        <a class="basket" href="#">Корзина: 0</a>
+        <a class="Order" href="#">Оформить заказ</a>
       </div>
       <div class="header-middle">
-        <h1>Интернет-магазин строительных материалов и инструментов для дома</h1>
+        <p>Интернет-магазин строительных материалов и инструментов для дома</p>
         <div class="contacts">
-            <p class="contacts-phone"> +7 (812) 555-05-55</p>
-            <p class="contacts-address">г. Санкт-Петербург, ул. Б.Конюшенная, д. 19/8</p>
+          <p class="contacts-phone"> +7 (812) 555-05-55</p>
+          <p class="contacts-address">г. Санкт-Петербург, ул. Б.Конюшенная, д. 19/8</p>
         </div>
         <ul class="user-navigation">
-          <li>Войти</li>
-          <li>Регистрация</li>
+          <li><a href="#">Войти</a></li>
+          <li><a href="#">Регистрация</a></li>
         </ul>
       </div>
       <nav>
         <ul class="site-navigation">
-          <li><a href="#">Главная</a></li>
+          <li><a href="index.html">Главная</a></li>
           <li><a href="#">Компания</a></li>
-          <li><a href="#">Каталог</a></li>
+          <li><a href="catalog.html">Каталог</a></li>
           <li><a href="#">Новости</a></li>
           <li><a href="#">Спецпредложения</a></li>
           <li><a href="#">Доставка</a></li>
@@ -39,24 +39,24 @@
     </header>
     <main>
       <section class="company">
-        <h1>КОМПАНИЯ "ТЕХНОМАРТ"</h1>
-        <p>Настоящий мужской шопинг начинается здесь! Огромный выбор товаров для ремонта и <br>
+        <h2>Компания &laquo;Техномарт&raquo;</h2>
+        <p>Настоящий мужской шопинг начинается здесь! Огромный выбор товаров для ремонта и
         строительства не оставит равнодушним любителей сэкономить на гастарбайтерах</p>
-        <p>Мы можем доставить ваш товар в самые отдаленные точки России! <br>
+        <p>Мы можем доставить ваш товар в самые отдаленные точки России!
         Техномарт работает со многими транспортными компнаиями:</p>
         <ul class="company-transport">
           <li>Деловые линии</li>
           <li>Автотрейдинг</li>
           <li>ЖелДорЭкспедиция</li>
-          <a class="button" href="#">ПОДРОБНЕЕ О КОМПАНИИ</a>
         </ul>
+        <a class="button" href="#">Подробнее о компании</a>
       </section>
       <section class="address">
-        <h2>КОНТАКТЫ</h2>
-        <p>Вы можете забрать товары сами, <br>
+        <h2>Контакты</h2>
+        <p>Вы можете забрать товары сами,
         заехав в наш офис:</p>
         <!--Здесь будет карта-->
-        <a class="button" href="#">ЗАБЛУДИЛИСЬ? НАПИШИТЕ НАМ!</a>
+        <a class="button" href="#">Заблудились? Напишите нам!</a>
       </section>
     </main>
     <footer>
@@ -81,15 +81,15 @@
           </ul>
       </div>
       <div class="footer-bottom">
-        <p>&#169 2010-2017 Компания "Техномарт" <br>
+        <p>&copy; 2010-2017 Компания &laquo;Техномарт&raquo; <br>
         Все права защищены</p>
         <a href="#">Инстаграм</a>
 			  <a href="#">Фейсбук</a>
         <a href="#">Вконтакте</a>
         <p>Обратная связь: <br>
-        <span class="footer-yellow-name">mail@htmlacademy.ru</span></p>
+        <a class="footer-yellow-name" href="#">mail@htmlacademy.ru</a></p>
         <p>Разработано - <br>
-        <span class="footer-yellow-name">htmlacademy.ru</span></p>
+        <a class="footer-yellow-name" href="https://htmlacademy.ru/">htmlacademy.ru</a></p>
       </div>
     </footer>
   </body>
