--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <p>Обратная связь: <br>
         <a class="footer-yellow-name" href="#">mail@htmlacademy.ru</a></p>
         <p>Разработано - <br>
-        <a class="footer-yellow-name" href="https://htmlacademy.ru/">htmlacademy.ru</a></p>
+        <a class="footer-yellow-name" href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a></p>
       </div>
     </footer>
   </body>
