--- a/catalog.html
+++ b/catalog.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Техномарт</title>
 </head>
+
 <body>
   <header>
     <div class="header-top">
@@ -12,7 +14,7 @@
       </a>
       <a class="bookmarks" href="#">Закладки: 0</a>
       <a class="basket basket-active" href="#">Корзина: 0</a>
-      <a class="Order" href="#">Оформить заказ</a>
+      <a class="order" href="#">Оформить заказ</a>
     </div>
     <div class="header-middle">
       <p>Интернет-магазин строительных материалов и инструментов для дома</p>
@@ -54,25 +56,21 @@
       <h2 class="visually-hidden">Список Перфораторов</h2>
       <ul class="catolog-list">
         <li class="catolog-item">
-          <p class="catolog-item-picture">
-            <a href="#">
-              <img src="#" width="0" height="0" alt="Перфоратор Bosch BFG 3000">
-            </a>
-          </p>
-          <p class="catolog-item-button">
-            <a class="button-green" href="#">Купить</a>
-            <a class="button-green" href="#">В закладки</a>
+          <a href="#">
+            <img src="#" width="0" height="0" alt="Перфоратор Bosch BFG 3000">
+          </a>
+          <p class="catolog-item-button"></p>
+          <a class="button-green" href="#">Купить</a>
+          <a class="button-green" href="#">В закладки</a>
           </p>
           <h3><a href="#">Перфоратор Bosch BFG 3000</a></h3>
           <p class="price">22500 р.</p>
           <p class="discount-price">15500 р.</p>
         </li>
         <li class="catolog-item">
-          <p class="catolog-item-picture">
-            <a href="#">
-              <img src="#" width="0" height="0" alt="Перфоратор Bosch BFG 6000">
-            </a>
-          </p>
+          <a href="#">
+            <img src="#" width="0" height="0" alt="Перфоратор Bosch BFG 6000">
+          </a>
           <p class="catolog-item-button">
             <a class="button-green" href="#">Купить</a>
             <a class="button-green" href="#">В закладки</a>
@@ -82,11 +80,9 @@
           <p class="discount-price">25500 р.</p>
         </li>
         <li class="catolog-item">
-          <p class="catolog-item-picture">
-            <a href="#">
-              <img src="#" width="0" height="0" alt="Перфоратор Bosch BFG 2000">
-            </a>
-          </p>
+          <a href="#">
+            <img src="#" width="0" height="0" alt="Перфоратор Bosch BFG 2000">
+          </a>
           <p class="catolog-item-button">
             <a class="button-green" href="#">Купить</a>
             <a class="button-green" href="#">В закладки</a>
@@ -95,11 +91,9 @@
           <p class="discount-price">12500 р.</p>
         </li>
         <li class="catolog-item">
-          <p class="catolog-item-picture">
-            <a href="#">
-              <img src="#" width="0" height="0" alt="Перфоратор Bosch BFG 3000">
-            </a>
-          </p>
+          <a href="#">
+            <img src="#" width="0" height="0" alt="Перфоратор Bosch BFG 3000">
+          </a>
           <p class="catolog-item-button">
             <a class="button-green" href="#">Купить</a>
             <a class="button-green" href="#">В закладки</a>
@@ -109,11 +103,9 @@
           <p class="discount-price">15500 р.</p>
         </li>
         <li class="catolog-item">
-          <p class="catolog-item-picture">
-            <a href="#">
-              <img src="#" width="0" height="0" alt="Перфоратор Bosch BFG 6000">
-            </a>
-          </p>
+          <a href="#">
+            <img src="#" width="0" height="0" alt="Перфоратор Bosch BFG 6000">
+          </a>
           <p class="catolog-item-button">
             <a class="button-green" href="#">Купить</a>
             <a class="button-green" href="#">В закладки</a>
@@ -123,11 +115,9 @@
           <p class="discount-price">25500 р.</p>
         </li>
         <li class="catolog-item">
-          <p class="catolog-item-picture">
-            <a href="#">
-              <img src="#" width="0" height="0" alt="Перфоратор Bosch BFG 2000">
-            </a>
-          </p>
+          <a href="#">
+            <img src="#" width="0" height="0" alt="Перфоратор Bosch BFG 2000">
+          </a>
           <p class="catolog-item-button">
             <a class="button-green" href="#">Купить</a>
             <a class="button-green" href="#">В закладки</a>
