--- a/catalog.html
+++ b/catalog.html
@@ -126,6 +126,12 @@
           <p class="discount-price">12500 р.</p>
         </li>
       </ul>
+      <ul class="pagination-list">
+        <li class="pagination-item pagination-item-current"><a href="#">1</a></li>
+        <li class="pagination-item"><a href="#">2</a></li>
+        <li class="pagination-item"><a href="#">3</a></li>
+        <li class="pagination-item"><a href="#">Следующая</a></li>
+      </ul>
     </section>
   </main>
   <footer>
