--- a/catalog.html
+++ b/catalog.html
@@ -57,7 +57,7 @@
       <ul class="catolog-list">
         <li class="catolog-item">
           <a href="#">
-            <img src="#" width="0" height="0" alt="Перфоратор Bosch BFG 3000">
+            <img src="./img/Bosch3000.jpg" width="218" height="170" alt="Перфоратор Bosch BFG 3000">
           </a>
           <p class="catolog-item-button"></p>
           <a class="button-green" href="#">Купить</a>
@@ -69,7 +69,7 @@
         </li>
         <li class="catolog-item">
           <a href="#">
-            <img src="#" width="0" height="0" alt="Перфоратор Bosch BFG 6000">
+            <img src="./img/Bosch6000.jpg" width="218" height="170" alt="Перфоратор Bosch BFG 6000">
           </a>
           <p class="catolog-item-button">
             <a class="button-green" href="#">Купить</a>
@@ -81,7 +81,7 @@
         </li>
         <li class="catolog-item">
           <a href="#">
-            <img src="#" width="0" height="0" alt="Перфоратор Bosch BFG 2000">
+            <img src="./img/Bosch2000.jpg" width="218" height="170" alt="Перфоратор Bosch BFG 2000">
           </a>
           <p class="catolog-item-button">
             <a class="button-green" href="#">Купить</a>
@@ -92,7 +92,7 @@
         </li>
         <li class="catolog-item">
           <a href="#">
-            <img src="#" width="0" height="0" alt="Перфоратор Bosch BFG 3000">
+            <img src="./img/Bosch3000.jpg" width="218" height="170" alt="Перфоратор Bosch BFG 3000">
           </a>
           <p class="catolog-item-button">
             <a class="button-green" href="#">Купить</a>
@@ -104,7 +104,7 @@
         </li>
         <li class="catolog-item">
           <a href="#">
-            <img src="#" width="0" height="0" alt="Перфоратор Bosch BFG 6000">
+            <img src="./img/Bosch6000.jpg" width="218" height="170" alt="Перфоратор Bosch BFG 6000">
           </a>
           <p class="catolog-item-button">
             <a class="button-green" href="#">Купить</a>
@@ -116,7 +116,7 @@
         </li>
         <li class="catolog-item">
           <a href="#">
-            <img src="#" width="0" height="0" alt="Перфоратор Bosch BFG 2000">
+            <img src="./img/Bosch2000.jpg" width="218" height="170" alt="Перфоратор Bosch BFG 2000">
           </a>
           <p class="catolog-item-button">
             <a class="button-green" href="#">Купить</a>
