Внес небольшие правки к третьему заданию
Удалил лишний параграф
Добавил необходимые отступы
Удалил атрибут href из сылки на текущую страницу

--- a/catalog.html
+++ b/catalog.html
@@ -59,9 +59,9 @@
           <a href="#">
             <img src="./img/Bosch3000.jpg" width="218" height="170" alt="Перфоратор Bosch BFG 3000">
           </a>
-          <p class="catolog-item-button"></p>
-          <a class="button-green" href="#">Купить</a>
-          <a class="button-green" href="#">В закладки</a>
+          <p class="catolog-item-button">
+            <a class="button-green" href="#">Купить</a>
+            <a class="button-green" href="#">В закладки</a>
           </p>
           <h3><a href="#">Перфоратор Bosch BFG 3000</a></h3>
           <p class="price">22500 р.</p>
@@ -127,7 +127,7 @@
         </li>
       </ul>
       <ul class="pagination-list">
-        <li class="pagination-item pagination-item-current"><a href="#">1</a></li>
+        <li class="pagination-item pagination-item-current"><a>1</a></li>
         <li class="pagination-item"><a href="#">2</a></li>
         <li class="pagination-item"><a href="#">3</a></li>
         <li class="pagination-item"><a href="#">Следующая</a></li>
