--- a/catalog.html
+++ b/catalog.html
@@ -50,7 +50,47 @@
     <h1 class="page-title">Перфораторы</h1>
     <section class="filters">
       <h2 class="visually-hidden">Фильтр товаров</h2>
-      <!--Здесь будет форма-->
+      <form action="https://echo.htmlacademy.ru" method="get">
+        <fieldset>
+          <legend>Производители:</legend>
+          <ul>
+            <li class="filter-option">
+              <input class="visually-hidden filter-input" type="checkbox" name="bosch" id="filter-bosch" checked>
+              <label for="filter-bosch">Bosch</label>
+            </li>
+            <li class="filter-option">
+              <input class="visually-hidden filter-input" type="checkbox" name="interscol" id="filter-interscol">
+              <label for="filter-interscol">Интерскол</label>
+            </li>
+            <li class="filter-option">
+              <input class="visually-hidden filter-input" type="checkbox" name="makita" id="filter-makita" checked>
+              <label for="filter-makita">Makita</label>
+            </li>
+            <li class="filter-option">
+              <input class="visually-hidden filter-input" type="checkbox" name="dewalt" id="filter-dewalt">
+              <label for="filter-dewalt">Dewalt</label>
+            </li>
+            <li class="filter-option">
+              <input class="visually-hidden filter-input" type="checkbox" name="hitachi" id="filter-hitachi">
+              <label for="filter-hitachi">Hitachi</label>
+            </li>
+          </ul>
+        </fieldset>
+        <fieldset>
+          <legend>Питание</legend>
+          <ul>
+            <li class="filter-option">
+              <input class="filter-input" type="radio" name="supply" value="battery" id="filter-battery" checked>
+              <label for="filter-battery">Аккумуляторные</label>
+            </li>
+            <li class="filter-option">
+              <input class="filter-input" type="radio" name="supply" value="networked" id="filter-networked">
+              <label for="filter-networked">Сетевые</label>
+            </li>
+          </ul>
+        </fieldset>
+        <button class="button filter-button">Показать</button>
+      </form>
     </section>
     <section class="catalog">
       <h2 class="visually-hidden">Список Перфораторов</h2>
