Разметил pop-up для каталога

--- a/catalog.html
+++ b/catalog.html
@@ -173,6 +173,15 @@
         <li class="pagination-item"><a href="#">Следующая</a></li>
       </ul>
     </section>
+    <section class="modal modal-productbasket">
+      <p class="modal-top">Товар добавлен в корзину!
+        <button class="modal-close" type="button">Закрыть</button>
+      </p>
+      <p class="modal-bottom">
+        <a class="button" href="#">Оформить заказ</a>
+        <button class="button">Продолжить покупки</button>
+      </p>
+    </section>
   </main>
   <footer>
     <div class="footer-top">
