Разметил pop-up на главной
Разметил pop-up форму написания письма на главной странице

--- a/catalog.html
+++ b/catalog.html
@@ -173,6 +173,7 @@
         <li class="pagination-item"><a href="#">Следующая</a></li>
       </ul>
     </section>
+    <!--Pop-up добавления товара в корзину-->
     <section class="modal modal-productbasket">
       <p class="modal-top">Товар добавлен в корзину!
         <button class="modal-close" type="button">Закрыть</button>
