--- a/catalog.html
+++ b/catalog.html
@@ -43,7 +43,7 @@
       </ul>
     </nav>
   </header>
-  <main>
+  <main class="catalog">
     <ul class="breadcrumbs">
       <li><a href="index.html">Главная</a></li>
       <li><a href="#">Каталог</a></li>
@@ -53,7 +53,7 @@
     <h1 class="page-title">Перфораторы</h1>
     <section class="filters">
       <h2 class="visually-hidden">Фильтр товаров</h2>
-      <form action="https://echo.htmlacademy.ru" method="get">
+      <form class="filter" action="https://echo.htmlacademy.ru" method="get">
         <fieldset>
           <legend>Производители:</legend>
           <ul>
@@ -106,7 +106,7 @@
             <a class="button-green" href="#">Купить</a>
             <a class="button-green" href="#">В закладки</a>
           </p>
-          <h3><a href="#">Перфоратор Bosch BFG 3000</a></h3>
+          <h3><a class="card-name" href="#">Перфоратор Bosch BFG 3000</a></h3>
           <p class="price">22500 р.</p>
           <p class="discount-price">15500 р.</p>
         </li>
@@ -118,7 +118,7 @@
             <a class="button-green" href="#">Купить</a>
             <a class="button-green" href="#">В закладки</a>
           </p>
-          <h3><a href="#">Перфоратор Bosch BFG 6000</a></h3>
+          <h3><a class="card-name" href="#">Перфоратор Bosch BFG 6000</a></h3>
           <p class="price">30500 р.</p>
           <p class="discount-price">25500 р.</p>
         </li>
@@ -130,7 +130,7 @@
             <a class="button-green" href="#">Купить</a>
             <a class="button-green" href="#">В закладки</a>
           </p>
-          <h3><a href="#">Перфоратор Bosch BFG 2000</a></h3>
+          <h3><a class="card-name" href="#">Перфоратор Bosch BFG 2000</a></h3>
           <p class="discount-price">12500 р.</p>
         </li>
         <li class="catolog-item">
@@ -141,7 +141,7 @@
             <a class="button-green" href="#">Купить</a>
             <a class="button-green" href="#">В закладки</a>
           </p>
-          <h3><a href="#">Перфоратор Bosch BFG 3000</a></h3>
+          <h3><a class="card-name" href="#">Перфоратор Bosch BFG 3000</a></h3>
           <p class="price">22500 р.</p>
           <p class="discount-price">15500 р.</p>
         </li>
@@ -153,7 +153,7 @@
             <a class="button-green" href="#">Купить</a>
             <a class="button-green" href="#">В закладки</a>
           </p>
-          <h3><a href="#">Перфоратор Bosch BFG 6000</a></h3>
+          <h3><a class="card-name" href="#">Перфоратор Bosch BFG 6000</a></h3>
           <p class="price">30500 р.</p>
           <p class="discount-price">25500 р.</p>
         </li>
@@ -165,7 +165,7 @@
             <a class="button-green" href="#">Купить</a>
             <a class="button-green" href="#">В закладки</a>
           </p>
-          <h3><a href="#">Перфоратор Bosch BFG 2000</a></h3>
+          <h3><a class="card-name" href="#">Перфоратор Bosch BFG 2000</a></h3>
           <p class="discount-price">12500 р.</p>
         </li>
       </ul>
