--- a/index.html
+++ b/index.html
@@ -1,52 +1,55 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Техномарт</title>
-    <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i&amp;subset=cyrillic" rel="stylesheet">
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
-  </head>
-  <body>
-    <header>
-      <div class="header-top">
-        <a href="#">
-          <img src="#" alt="Логотип Техномарт">
-        </a>
-        <a class="bookmarks" href="#">Закладки: 0</a>
-        <a class="basket" href="#">Корзина: 0</a>
-        <a class="Order" href="#">Оформить заказ</a>
+
+<head>
+  <meta charset="utf-8">
+  <title>HTML Academy: Техномарт</title>
+  <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i&amp;subset=cyrillic" rel="stylesheet">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
+</head>
+
+<body>
+  <header>
+    <div class="header-top">
+      <a href="#">
+        <img src="#" alt="Логотип Техномарт">
+      </a>
+      <a class="bookmarks" href="#">Закладки: 0</a>
+      <a class="basket" href="#">Корзина: 0</a>
+      <a class="Order" href="#">Оформить заказ</a>
+    </div>
+    <div class="header-middle">
+      <p>Интернет-магазин строительных материалов и инструментов для дома</p>
+      <div class="contacts">
+        <p class="contacts-phone"> +7 (812) 555-05-55</p>
+        <p class="contacts-address">г. Санкт-Петербург, ул. Б.Конюшенная, д. 19/8</p>
       </div>
-      <div class="header-middle">
-        <p>Интернет-магазин строительных материалов и инструментов для дома</p>
-        <div class="contacts">
-          <p class="contacts-phone"> +7 (812) 555-05-55</p>
-          <p class="contacts-address">г. Санкт-Петербург, ул. Б.Конюшенная, д. 19/8</p>
-        </div>
-        <ul class="user-navigation">
-          <li><a href="#">Войти</a></li>
-          <li><a href="#">Регистрация</a></li>
-        </ul>
-      </div>
-      <nav>
-        <ul class="site-navigation">
-          <li><a href="index.html">Главная</a></li>
-          <li><a href="#">Компания</a></li>
-          <li><a href="catalog.html">Каталог</a></li>
-          <li><a href="#">Новости</a></li>
-          <li><a href="#">Спецпредложения</a></li>
-          <li><a href="#">Доставка</a></li>
-          <li><a href="#">Контакты</a></li>
-        </ul>
-      </nav>
-    </header>
-    <main>
-      <section class="company">
+      <ul class="user-navigation">
+        <li><a href="#">Войти</a></li>
+        <li><a href="#">Регистрация</a></li>
+      </ul>
+    </div>
+    <nav>
+      <ul class="site-navigation">
+        <li><a href="index.html">Главная</a></li>
+        <li><a href="#">Компания</a></li>
+        <li><a href="catalog.html">Каталог</a></li>
+        <li><a href="#">Новости</a></li>
+        <li><a href="#">Спецпредложения</a></li>
+        <li><a href="#">Доставка</a></li>
+        <li><a href="#">Контакты</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <div class="company">
+      <section class="company-description">
         <h2>Компания &laquo;Техномарт&raquo;</h2>
         <p>Настоящий мужской шопинг начинается здесь! Огромный выбор товаров для ремонта и
-        строительства не оставит равнодушним любителей сэкономить на гастарбайтерах</p>
+          строительства не оставит равнодушним любителей сэкономить на гастарбайтерах</p>
         <p>Мы можем доставить ваш товар в самые отдаленные точки России!
-        Техномарт работает со многими транспортными компнаиями:</p>
+          Техномарт работает со многими транспортными компнаиями:</p>
         <ul class="company-transport">
           <li>Деловые линии</li>
           <li>Автотрейдинг</li>
@@ -54,64 +57,66 @@
         </ul>
         <a class="button" href="#">Подробнее о компании</a>
       </section>
-      <section class="address">
+      <section class="company-address">
         <h2>Контакты</h2>
         <p>Вы можете забрать товары сами,
-        заехав в наш офис:</p>
+          заехав в наш офис:</p>
         <!--Здесь будет карта-->
         <a class="button" href="#">Заблудились? Напишите нам!</a>
       </section>
-      <!--Pop-up формы обратной связи-->
-      <section class="modal modal-letter">
-        <h2 class="visually-hidden">Форма написания письма</h2>
-        <div class="modal-top">
-          <form class="letter-form" action="https://echo.htmlacademy.ru" method="POST">
-            <label for="modal-name">Ваше имя:</label>
-            <input type="text" name="name" placeholder="Имя Фамилия" value="" id="modal-name">
-            <label for="modal-email">Ваше имя:</label>
-            <input type="text" name="email" placeholder="email@example.com" value="" id="modal-email">
-            <p><label for="modal-text">Текст письма:</label></p>
-            <textarea name="text" id="modal-text" cols="30" rows="10" placeholder="В свободной форме"></textarea>
-          </form>
-          <button class="modal-close" type="button">Закрыть</button>
-        </div>
-        <p class="modal-bottom">
-          <button class="button">Отправить</button>
-        </p>
-      </section>
-    </main>
-    <footer>
-      <div class="footer-top">
-        <a href="#">
-          <img src="#" alt="Логотип Техномарт">
-        </a>
-        <p class="footer-contacts">г. Санкт-Петербург, ул. Б.Конюшенная, д. 19/8 <br>
-          +7 (812) 555-05-55</p>
-          <ul class="footer-menu">
-            <li><a href="#">Компания</a></li>
-            <li><a href="#">Новости</a></li>
-            <li><a href="#">Католог</a></li>
-            <li><a href="#">Доставка</a></li>
-            <li><a href="#">Контакты</a></li>
-          </ul>
-          <ul class="footer-categories">
-            <li><a href="#">Материалы</a></li>
-            <li><a href="#">Техника</a></li>
-            <li><a href="#">Инструменты</a></li>
-            <li><a href="#">Спецпредложения</a></li>
-          </ul>
+    </div>
+    <!--Pop-up формы обратной связи-->
+    <section class="modal modal-letter">
+      <h2 class="visually-hidden">Форма написания письма</h2>
+      <div class="modal-top">
+        <form class="letter-form" action="https://echo.htmlacademy.ru" method="POST">
+          <label for="modal-name">Ваше имя:</label>
+          <input type="text" name="name" placeholder="Имя Фамилия" value="" id="modal-name">
+          <label for="modal-email">Ваше имя:</label>
+          <input type="text" name="email" placeholder="email@example.com" value="" id="modal-email">
+          <p><label for="modal-text">Текст письма:</label></p>
+          <textarea name="text" id="modal-text" cols="30" rows="10" placeholder="В свободной форме"></textarea>
+        </form>
+        <button class="button modal-close" type="button">Закрыть</button>
       </div>
-      <div class="footer-bottom">
-        <p>&copy; 2010-2017 Компания &laquo;Техномарт&raquo; <br>
+      <p class="modal-bottom">
+        <button class="button">Отправить</button>
+      </p>
+    </section>
+  </main>
+  <footer>
+    <div class="footer-top">
+      <a href="#">
+        <img src="#" alt="Логотип Техномарт">
+      </a>
+      <p class="footer-contacts">г. Санкт-Петербург, ул. Б.Конюшенная, д. 19/8 <br>
+        +7 (812) 555-05-55</p>
+      <ul class="footer-menu">
+        <li><a href="#">Компания</a></li>
+        <li><a href="#">Новости</a></li>
+        <li><a href="#">Католог</a></li>
+        <li><a href="#">Доставка</a></li>
+        <li><a href="#">Контакты</a></li>
+      </ul>
+      <ul class="footer-categories">
+        <li><a href="#">Материалы</a></li>
+        <li><a href="#">Техника</a></li>
+        <li><a href="#">Инструменты</a></li>
+        <li><a href="#">Спецпредложения</a></li>
+      </ul>
+    </div>
+    <div class="footer-bottom">
+      <p>&copy; 2010-2017 Компания &laquo;Техномарт&raquo; <br>
         Все права защищены</p>
-        <a href="#">Инстаграм</a>
-			  <a href="#">Фейсбук</a>
-        <a href="#">Вконтакте</a>
-        <p>Обратная связь: <br>
+      <a class="social-button" href="#">Инстаграм</a>
+      <a class="social-button" href="#">Фейсбук</a>
+      <a class="social-button" href="#">Вконтакте</a>
+      <p>Обратная связь: <br>
         <a class="footer-yellow-name" href="#">mail@htmlacademy.ru</a></p>
-        <p>Разработано - <br>
+      <p>Разработано - <br>
         <a class="footer-yellow-name" href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a></p>
-      </div>
-    </footer>
-  </body>
+    </div>
+  </footer>
+</body>
+
 </html>
