--- a/catalog.html
+++ b/catalog.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <header>
+  <header class="menu">
     <div class="header-top">
       <a href="index.html">
         <img src="#" alt="Логотип Техномарт">
