--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 </head>
 
 <body>
-  <header>
+  <header class="menu">
     <div class="header-top">
       <a href="#">
         <img src="#" alt="Логотип Техномарт">
       </a>
       <a class="bookmarks" href="#">Закладки: 0</a>
       <a class="basket" href="#">Корзина: 0</a>
-      <a class="Order" href="#">Оформить заказ</a>
+      <a class="order" href="#">Оформить заказ</a>
     </div>
     <div class="header-middle">
       <p>Интернет-магазин строительных материалов и инструментов для дома</p>
