--- a/index.html
+++ b/index.html
@@ -12,13 +12,17 @@
 <body>
   <header class="menu">
     <div class="header-top">
-      <a href="#">
-        <img src="#" alt="Логотип Техномарт">
+      <a class="logo" href="#">
+        <img src="./img/logo.svg" alt="Логотип Техномарт">
       </a>
+      <form class="search" action="https://echo.htmlacademy.ru" method="get">
+        <input class="search-input" type="search" placeholder="Поиск:">
+      </form>
       <a class="bookmarks" href="#">Закладки: 0</a>
       <a class="basket" href="#">Корзина: 0</a>
       <a class="order" href="#">Оформить заказ</a>
     </div>
+    <div class="container">
     <div class="header-middle">
       <p>Интернет-магазин строительных материалов и инструментов для дома</p>
       <div class="contacts">
@@ -30,7 +34,7 @@
         <li><a href="#">Регистрация</a></li>
       </ul>
     </div>
-    <nav>
+    <nav class="navigation">
       <ul class="site-navigation">
         <li><a href="index.html">Главная</a></li>
         <li><a href="#">Компания</a></li>
@@ -41,15 +45,17 @@
         <li><a href="#">Контакты</a></li>
       </ul>
     </nav>
+  </div>
   </header>
   <main>
+    <div class="container">
     <div class="company">
       <section class="company-description">
         <h2>Компания &laquo;Техномарт&raquo;</h2>
         <p>Настоящий мужской шопинг начинается здесь! Огромный выбор товаров для ремонта и
           строительства не оставит равнодушним любителей сэкономить на гастарбайтерах</p>
-        <p>Мы можем доставить ваш товар в самые отдаленные точки России!
-          Техномарт работает со многими транспортными компнаиями:</p>
+        <p>Мы можем доставить ваш товар в самые отдаленные точки России! <br>
+           Техномарт работает со многими транспортными компнаиями:</p>
         <ul class="company-transport">
           <li>Деловые линии</li>
           <li>Автотрейдинг</li>
@@ -65,8 +71,57 @@
         <a class="button" href="#">Заблудились? Напишите нам!</a>
       </section>
     </div>
-    <!--Pop-up формы обратной связи-->
-    <section class="modal modal-letter">
+    </div>
+  </main>
+  <footer>
+    <div class="footer-top">
+      <div class="container">
+        <div class="footer-top-items">
+      <a href="#">
+        <img class="logo" src="./img/logo.svg" alt="Логотип Техномарт">
+      </a>
+      <p class="footer-contacts">г. Санкт-Петербург, ул. Б.Конюшенная, д. 19/8 <br>
+        +7 (812) 555-05-55</p>
+        </div>
+        <div class="footer-top-items">
+      <ul class="footer-menu">
+        <li><a href="#">Компания</a></li>
+        <li><a href="#">Новости</a></li>
+        <li><a href="#">Католог</a></li>
+        <li><a href="#">Доставка</a></li>
+        <li><a href="#">Контакты</a></li>
+      </ul>
+      <ul class="footer-categories">
+        <li><a href="#">Материалы</a></li>
+        <li><a href="#">Техника</a></li>
+        <li><a href="#">Инструменты</a></li>
+        <li><a href="#">Спецпредложения</a></li>
+      </ul>
+    </div>
+    </div>
+    </div>
+    <div class="footer-bottom">
+        <div class="container">
+      <div class="footer-bottom-items">
+      <p>&copy; 2010-2017 Компания &laquo;Техномарт&raquo; <br>
+        Все права защищены</p>
+      </div>
+        <div class="footer-bottom-items">
+      <a class="social-button" href="#">Инстаграм</a>
+      <a class="social-button" href="#">Фейсбук</a>
+      <a class="social-button" href="#">Вконтакте</a>
+      </div>
+      <div class="footer-bottom-items">
+      <p>Обратная связь: <br>
+        <a class="footer-yellow-name" href="#">mail@htmlacademy.ru</a></p>
+      <p>Разработано - <br>
+        <a class="footer-yellow-name" href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a></p>
+      </div>
+      </div>
+    </div>
+  </footer>
+  <!--Pop-up формы обратной связи-->
+  <section class="modal modal-letter">
       <h2 class="visually-hidden">Форма написания письма</h2>
       <div class="modal-top">
         <form class="letter-form" action="https://echo.htmlacademy.ru" method="POST">
@@ -83,40 +138,6 @@
         <button class="button">Отправить</button>
       </p>
     </section>
-  </main>
-  <footer>
-    <div class="footer-top">
-      <a href="#">
-        <img src="#" alt="Логотип Техномарт">
-      </a>
-      <p class="footer-contacts">г. Санкт-Петербург, ул. Б.Конюшенная, д. 19/8 <br>
-        +7 (812) 555-05-55</p>
-      <ul class="footer-menu">
-        <li><a href="#">Компания</a></li>
-        <li><a href="#">Новости</a></li>
-        <li><a href="#">Католог</a></li>
-        <li><a href="#">Доставка</a></li>
-        <li><a href="#">Контакты</a></li>
-      </ul>
-      <ul class="footer-categories">
-        <li><a href="#">Материалы</a></li>
-        <li><a href="#">Техника</a></li>
-        <li><a href="#">Инструменты</a></li>
-        <li><a href="#">Спецпредложения</a></li>
-      </ul>
-    </div>
-    <div class="footer-bottom">
-      <p>&copy; 2010-2017 Компания &laquo;Техномарт&raquo; <br>
-        Все права защищены</p>
-      <a class="social-button" href="#">Инстаграм</a>
-      <a class="social-button" href="#">Фейсбук</a>
-      <a class="social-button" href="#">Вконтакте</a>
-      <p>Обратная связь: <br>
-        <a class="footer-yellow-name" href="#">mail@htmlacademy.ru</a></p>
-      <p>Разработано - <br>
-        <a class="footer-yellow-name" href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a></p>
-    </div>
-  </footer>
 </body>
 
 </html>
