--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
   <header class="menu">
     <div class="header-top">
+      <div class="container">
       <a class="logo" href="#">
         <img src="./img/logo.svg" alt="Логотип Техномарт">
       </a>
@@ -22,9 +23,10 @@
       <a class="basket" href="#">Корзина: 0</a>
       <a class="order" href="#">Оформить заказ</a>
     </div>
+    </div>
     <div class="container">
     <div class="header-middle">
-      <p>Интернет-магазин строительных материалов и инструментов для дома</p>
+      <p class="headline">Интернет-магазин строительных материалов и инструментов для дома</p>
       <div class="contacts">
         <p class="contacts-phone"> +7 (812) 555-05-55</p>
         <p class="contacts-address">г. Санкт-Петербург, ул. Б.Конюшенная, д. 19/8</p>
