Мелкие элементы на главной странице.
Сверстал необходимые по заданию мелкие элементы на главной странице.

--- a/catalog.html
+++ b/catalog.html
@@ -14,7 +14,7 @@
     <div class="header-top">
       <div class="container">
         <a class="logo" href="index.html">
-          <img src="./img/logo.svg" alt="Логотип Техномарт">
+          <img src="./img/logo.svg" width="111px" height="18px" alt="Логотип Техномарт">
         </a>
         <form class="search" action="https://echo.htmlacademy.ru" method="get">
           <input class="search-input" type="search" placeholder="Поиск:">
