--- a/catalog.html
+++ b/catalog.html
@@ -17,6 +17,10 @@
           <img src="./img/logo.svg" width="111px" height="18px" alt="Логотип Техномарт">
         </a>
         <form class="search" action="https://echo.htmlacademy.ru" method="get">
+          <label class="search-submit">
+            <input type="submit" class="visually-hidden">
+            <span class="submit-indicator"></span>
+          </label>
           <input class="search-input" type="search" placeholder="Поиск:">
         </form>
         <a class="bookmarks" href="#">Закладки: 0</a>
@@ -33,7 +37,7 @@
         </div>
         <div class="user">
           <p class="user-name">Равшан Джамшутович</p>
-          <ul>
+          <ul class="user-menu">
             <li><a href="#">Мои заказы</a></li>
             <li><a href="#">Личный кабинет</a></li>
           </ul>
