--- a/catalog.html
+++ b/catalog.html
@@ -59,10 +59,10 @@
   <main class="catalog">
     <div class="container">
       <ul class="breadcrumbs">
-        <li><a href="index.html">Главная</a></li>
-        <li><a href="#">Каталог</a></li>
-        <li><a href="#">Инструмент</a></li>
-        <li class="breadcrumbs-current">Перефараторы</li>
+        <li><a href="index.html"><span class="visually-hidden">Главная</span></a></li>
+        <li class="next"><a href="#">Каталог</a></li>
+        <li class="next"><a href="#">Инструмент</a></li>
+        <li class="breadcrumbs-current next">Перефараторы</li>
       </ul>
       <h1 class="page-title">Перфораторы</h1>
       <div class="filter-catalog">
@@ -73,23 +73,23 @@
               <legend>Производители:</legend>
               <ul>
                 <li class="filter-option">
-                  <input class="visually-hidden filter-input" type="checkbox" name="bosch" id="filter-bosch" checked>
+                  <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="bosch" id="filter-bosch" checked>
                   <label for="filter-bosch">Bosch</label>
                 </li>
                 <li class="filter-option">
-                  <input class="visually-hidden filter-input" type="checkbox" name="interscol" id="filter-interscol">
+                  <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="interscol" id="filter-interscol">
                   <label for="filter-interscol">Интерскол</label>
                 </li>
                 <li class="filter-option">
-                  <input class="visually-hidden filter-input" type="checkbox" name="makita" id="filter-makita" checked>
+                  <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="makita" id="filter-makita" checked>
                   <label for="filter-makita">Makita</label>
                 </li>
                 <li class="filter-option">
-                  <input class="visually-hidden filter-input" type="checkbox" name="dewalt" id="filter-dewalt">
+                  <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="dewalt" id="filter-dewalt">
                   <label for="filter-dewalt">Dewalt</label>
                 </li>
                 <li class="filter-option">
-                  <input class="visually-hidden filter-input" type="checkbox" name="hitachi" id="filter-hitachi">
+                  <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="hitachi" id="filter-hitachi">
                   <label for="filter-hitachi">Hitachi</label>
                 </li>
               </ul>
