Декоративные элементы и попап
Сделал декоративные элементы обязательных блоков.
Успел сверстать один по ап.

--- a/catalog.html
+++ b/catalog.html
@@ -30,7 +30,7 @@
     </div>
     <div class="container">
       <div class="header-middle">
-        <p class="headline">Интернет-магазин строительных материалов и инструментов для дома</p>
+        <p class="headline">Интернет-магазин строительных материалов и&nbsp;инструментов для дома</p>
         <div class="contacts">
           <p class="contacts-phone"> +7 (812) 555-05-55</p>
           <p class="contacts-address">г. Санкт-Петербург, ул. Б.Конюшенная, д. 19/8</p>
@@ -59,7 +59,7 @@
   <main class="catalog">
     <div class="container">
       <ul class="breadcrumbs">
-        <li><a href="index.html"><span class="visually-hidden">Главная</span></a></li>
+        <li><a class="breadcrumbs-main" href="index.html"><span class="visually-hidden">Главная</span></a></li>
         <li class="next"><a href="#">Каталог</a></li>
         <li class="next"><a href="#">Инструмент</a></li>
         <li class="breadcrumbs-current next">Перефараторы</li>
@@ -98,11 +98,11 @@
               <legend>Питание</legend>
               <ul>
                 <li class="filter-option">
-                  <input class="filter-input" type="radio" name="supply" value="battery" id="filter-battery" checked>
+                  <input class="visually-hidden filter-input filter-input-radio" type="radio" name="supply" value="battery" id="filter-battery" checked>
                   <label for="filter-battery">Аккумуляторные</label>
                 </li>
                 <li class="filter-option">
-                  <input class="filter-input" type="radio" name="supply" value="networked" id="filter-networked">
+                  <input class="visually-hidden filter-input filter-input-radio" type="radio" name="supply" value="networked" id="filter-networked">
                   <label for="filter-networked">Сетевые</label>
                 </li>
               </ul>
@@ -121,7 +121,7 @@
                 <a class="button-green" href="#">Купить</a>
                 <a class="button-green" href="#">В закладки</a>
               </p>
-              <h3><a class="card-name" href="#">Перфоратор Bosch BFG 3000</a></h3>
+              <h3><a class="card-name" href="#">Перфоратор Bosch<span class="item-model">BFG 3000</span></a></h3>
               <p class="price">22500 р.</p>
               <p class="discount-price">15500 р.</p>
             </li>
@@ -133,7 +133,7 @@
                 <a class="button-green" href="#">Купить</a>
                 <a class="button-green" href="#">В закладки</a>
               </p>
-              <h3><a class="card-name" href="#">Перфоратор Bosch BFG 6000</a></h3>
+              <h3><a class="card-name" href="#">Перфоратор Bosch<span class="item-model">BFG 6000</span></a></h3>
               <p class="price">30500 р.</p>
               <p class="discount-price">25500 р.</p>
             </li>
@@ -141,12 +141,15 @@
               <a href="#">
                 <img src="./img/bosch2000.jpg" width="218" height="170" alt="Перфоратор Bosch BFG 2000">
               </a>
+              <div class="strip">новинка</div>
               <p class="catolog-item-button">
                 <a class="button-green" href="#">Купить</a>
                 <a class="button-green" href="#">В закладки</a>
               </p>
-              <h3><a class="card-name" href="#">Перфоратор Bosch BFG 2000</a></h3>
-              <p class="discount-price">12500 р.</p>
+              <div class="without-price">
+                <h3><a class="card-name" href="#">Перфоратор Bosch<span class="item-model">BFG 2000</span></a></h3>
+                <p class="discount-price">12500 р.</p>
+              </div>
             </li>
             <li class="catolog-item">
               <a href="#">
@@ -156,7 +159,7 @@
                 <a class="button-green" href="#">Купить</a>
                 <a class="button-green" href="#">В закладки</a>
               </p>
-              <h3><a class="card-name" href="#">Перфоратор Bosch BFG 3000</a></h3>
+              <h3><a class="card-name" href="#">Перфоратор Bosch<span class="item-model">BFG 3000</span></a></h3>
               <p class="price">22500 р.</p>
               <p class="discount-price">15500 р.</p>
             </li>
@@ -164,11 +167,12 @@
               <a href="#">
                 <img src="./img/bosch6000.jpg" width="218" height="170" alt="Перфоратор Bosch BFG 6000">
               </a>
+              <div class="strip">новинка</div>
               <p class="catolog-item-button">
                 <a class="button-green" href="#">Купить</a>
                 <a class="button-green" href="#">В закладки</a>
               </p>
-              <h3><a class="card-name" href="#">Перфоратор Bosch BFG 6000</a></h3>
+              <h3><a class="card-name" href="#">Перфоратор Bosch<span class="item-model">BFG 6000</span></a></h3>
               <p class="price">30500 р.</p>
               <p class="discount-price">25500 р.</p>
             </li>
@@ -180,18 +184,21 @@
                 <a class="button-green" href="#">Купить</a>
                 <a class="button-green" href="#">В закладки</a>
               </p>
-              <h3><a class="card-name" href="#">Перфоратор Bosch BFG 2000</a></h3>
-              <p class="discount-price">12500 р.</p>
+              <div class="without-price">
+                <h3><a class="card-name" href="#">Перфоратор Bosch<span class="item-model">BFG 2000</span></a></h3>
+                <p class="discount-price">12500 р.</p>
+              </div>
             </li>
             <li class="catolog-item">
               <a href="#">
                 <img src="./img/bosch3000.jpg" width="218" height="170" alt="Перфоратор Bosch BFG 3000">
               </a>
+              <div class="strip">новинка</div>
               <p class="catolog-item-button">
                 <a class="button-green" href="#">Купить</a>
                 <a class="button-green" href="#">В закладки</a>
               </p>
-              <h3><a class="card-name" href="#">Перфоратор Bosch BFG 3000</a></h3>
+              <h3><a class="card-name" href="#">Перфоратор Bosch<span class="item-model">BFG 3000</span></a></h3>
               <p class="price">22500 р.</p>
               <p class="discount-price">15500 р.</p>
             </li>
@@ -200,10 +207,10 @@
                 <img src="./img/bosch6000.jpg" width="218" height="170" alt="Перфоратор Bosch BFG 6000">
               </a>
               <p class="catolog-item-button">
-                <a class="button-green" href="#">Купить</a>
-                <a class="button-green" href="#">В закладки</a>
+                <a class="button-green-buy" href="#">Купить</a>
+                <a class="button-green-bookmark" href="#">В закладки</a>
               </p>
-              <h3><a class="card-name" href="#">Перфоратор Bosch BFG 6000</a></h3>
+              <h3><a class="card-name" href="#">Перфоратор Bosch<span class="item-model">BFG 6000</span></a></h3>
               <p class="price">30500 р.</p>
               <p class="discount-price">25500 р.</p>
             </li>
@@ -215,31 +222,33 @@
                 <a class="button-green" href="#">Купить</a>
                 <a class="button-green" href="#">В закладки</a>
               </p>
-              <h3><a class="card-name" href="#">Перфоратор Bosch BFG 2000</a></h3>
-              <p class="discount-price">12500 р.</p>
+              <div class="without-price">
+                <h3><a class="card-name" href="#">Перфоратор Bosch<span class="item-model">BFG 2000</span></a></h3>
+                <p class="discount-price">12500 р.</p>
+              </div>
             </li>
           </ul>
           <ul class="pagination-list">
             <li class="pagination-item pagination-item-current"><a>1</a></li>
             <li class="pagination-item"><a href="#">2</a></li>
             <li class="pagination-item"><a href="#">3</a></li>
-            <li class="pagination-item"><a href="#">Следующая</a></li>
+            <li class="pagination-item pagination-item-next"><a href="#">Следующая</a></li>
           </ul>
         </section>
       </div>
     </div>
   </main>
-  <footer>
+  <footer class="footer">
     <div class="footer-top">
       <div class="container">
-        <div class="footer-top-items">
-          <a href="#">
-            <img class="logo" src="./img/logo.svg" alt="Логотип Техномарт">
+        <div class="footer-top-adress">
+          <a class="logo" href="#">
+            <img width="138px" height="23px" src="./img/logo.svg" alt="Логотип Техномарт">
           </a>
           <p class="footer-contacts">г. Санкт-Петербург, ул. Б.Конюшенная, д. 19/8 <br>
             +7 (812) 555-05-55</p>
         </div>
-        <div class="footer-top-items">
+        <div class="footer-top-menu">
           <ul class="footer-menu">
             <li><a href="#">Компания</a></li>
             <li><a href="#">Новости</a></li>
@@ -258,16 +267,16 @@
     </div>
     <div class="footer-bottom">
       <div class="container">
-        <div class="footer-bottom-items">
+        <div class="footer-bottom-copy">
           <p>&copy; 2010-2017 Компания &laquo;Техномарт&raquo; <br>
             Все права защищены</p>
         </div>
-        <div class="footer-bottom-items">
-          <a class="social-button" href="#">Инстаграм</a>
-          <a class="social-button" href="#">Фейсбук</a>
-          <a class="social-button" href="#">Вконтакте</a>
+        <div class="footer-bottom-social">
+          <a class="social-button social-button-vk" href="#"><span class="visually-hidden">Вконтакте</span></a>
+          <a class="social-button social-button-face" href="#"><span class="visually-hidden">Фейсбук</span></a>
+          <a class="social-button social-button-inst" href="#"><span class="visually-hidden">Инстаграм</span></a>
         </div>
-        <div class="footer-bottom-items">
+        <div class="footer-bottom-feedback">
           <p>Обратная связь: <br>
             <a class="footer-yellow-name" href="#">mail@htmlacademy.ru</a></p>
           <p>Разработано - <br>
@@ -278,12 +287,16 @@
   </footer>
   <!--Pop-up добавления товара в корзину-->
   <section class="modal modal-productbasket">
-    <p class="modal-top">Товар добавлен в корзину!
+    <div class="modal-top-productbasket">
+      <span class="check-mark"></span>
+      <p class="modal-top-text">
+        Товар добавлен в корзину!
+      </p>
       <button class="modal-close" type="button">Закрыть</button>
-    </p>
+    </div>
     <p class="modal-bottom">
-      <a class="button" href="#">Оформить заказ</a>
-      <button class="button">Продолжить покупки</button>
+      <a class="button button-checkout" href="#">Оформить заказ</a>
+      <button class="button button-order">Продолжить покупки</button>
     </p>
   </section>
 </body>
