--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </div>
     <div class="container">
       <div class="header-middle">
-        <p class="headline">Интернет-магазин строительных материалов и инструментов для дома</p>
+        <p class="headline">Интернет-магазин строительных материалов и&nbsp;инструментов для дома</p>
         <div class="contacts">
           <p class="contacts-phone"> +7 (812) 555-05-55</p>
           <p class="contacts-address">г. Санкт-Петербург, ул. Б.Конюшенная, д. 19/8</p>
@@ -129,7 +129,7 @@
   <!--Pop-up формы обратной связи-->
   <section class="modal modal-letter">
     <h2 class="visually-hidden">Форма написания письма</h2>
-    <div class="modal-top">
+    <div class="modal-top-letter">
       <form class="letter-form" action="https://echo.htmlacademy.ru" method="POST">
         <label for="modal-name">Ваше имя:</label>
         <input type="text" name="name" placeholder="Имя Фамилия" value="" id="modal-name">
