--- a/catalog.html
+++ b/catalog.html
@@ -45,13 +45,13 @@
       </div>
       <nav class="navigation">
         <ul class="site-navigation">
-          <li><a href="index.html">Главная</a></li>
-          <li><a href="#">Компания</a></li>
-          <li><a href="catalog.html">Каталог</a></li>
-          <li><a href="#">Новости</a></li>
-          <li><a href="#">Спецпредложения</a></li>
-          <li><a href="#">Доставка</a></li>
-          <li><a href="#">Контакты</a></li>
+          <li><a class="site-navigation-items site-navigation-first" href="index.html">Главная</a></li>
+          <li><a class="site-navigation-items" href="#">Компания</a></li>
+          <li><a class="site-navigation-items" href="catalog.html">Каталог</a></li>
+          <li><a class="site-navigation-items" href="#">Новости</a></li>
+          <li><a class="site-navigation-items" href="#">Спецпредложения</a></li>
+          <li><a class="site-navigation-items" href="#">Доставка</a></li>
+          <li><a class="site-navigation-items site-navigation-last" href="#">Контакты</a></li>
         </ul>
       </nav>
     </div>
@@ -143,7 +143,7 @@
               </a>
               <div class="strip">новинка</div>
               <p class="catolog-item-button">
-                <a class="button-green" href="#">Купить</a>
+                <a class="button-green" href="#"><span class="catolog-item-basket"></span>Купить</a>
                 <a class="button-green" href="#">В закладки</a>
               </p>
               <div class="without-price">
